[package]
name = "thin-string"
version = "0.1.0"
edition = "2018"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
license = "MIT"
description = "A String with a smaller stack footprint "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thin-vec = "0.2.3"