[package]
name = "thin-string"
version = "0.1.2"
edition = "2018"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
license = "MIT"
description = "A String with a smaller stack footprint"
documentation = "https://docs.rs/thin-string"
repository = "https://github.com/Kl4rry/thin-string"
homepage = "https://github.com/Kl4rry/thin-string"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thin-vec = "0.2.3"